# DeepSeekQQ

./: .env.backup.1780308679  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  adb_proxy.py  bot.log.bak.0530  bot.py  call_lighthouse.js  call_lighthouse.py  comprehensive-audit-report-2026-06-18.md  council-skill-implementation-report.md  council-test-output-deep.json  deploy.sh  explore_phone.ps1  find_phone.ps1  github-api.js  glm_result_1.txt  glm_result_2.txt  guild1.db-shm  guild1.db-wal  implementation-plan-2026-06-18.md  pyproject.toml  pyrightconfig.json  ruff.toml  tokenlens-plan.md  vision.py  展示.md
DeepSeekQQ/: .env.example  .env.full.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  bot.py  deploy.sh  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  真人化实施计划-2026-06-19.md  真人化审计与验证汇总-2026-06-19.md  真人化差距分析-2026-06-19.md  真人化最终实施计划-2026-06-19.md  真人化深度审查报告-2026-06-19.md  真人化深度审计-2026-06-19.md  真人化验证报告-2026-06-19.md
DeepSeekQQ/.github/workflows/: bot-ci.yml
DeepSeekQQ/deploy/: README-api.md  api.env.example  deepseek-api.service
DeepSeekQQ/docs/: behavior-audit-plan.md
DeepSeekQQ/plugins/deepseek/: __init__.py  _audio_utils.py  absence_events.py  activity_sim.py  agent_base.py  api.py  behavior_engine.py  bilibili_parser.py  causal_context.py  circuit_breaker.py  config.py  constants.py  context_analyzer.py  context_compressor.py  context_optimizer.py  conversation_fatigue.py  database.py  db_affection.py  db_cache.py  db_core.py  db_group.py  db_memories.py  db_memories_deep.py  db_mood.py  db_platform.py  db_preferences.py  db_proactive.py  db_reminders.py  db_session.py  db_social.py  db_tags.py  douyin_parser.py  emotion_accumulator.py  emotion_classifier.py  emotion_deep.py  emotion_qwen.py  error_reporter.py  follow_up.py  global_state.py  group_heat.py  (+61 more)
DeepSeekQQ/plugins/deepseek/agents/: __init__.py
DeepSeekQQ/plugins/deepseek/api_platform/: __init__.py  abilities.py  admin.py  api_keys.py  auth.py  bots.py  channels.py  chat.py  chat_media.py  dashboard.py  deps.py  kms.py  notifications.py  quota.py  server.py  stats.py  templates.py
DeepSeekQQ/plugins/deepseek/middleware/: auth.py
DeepSeekQQ/plugins/deepseek/proactive/: __init__.py  holiday_greet.py  morning_greeting.py  night_reminder.py  shared.py  silence_probe.py  sleep_nag.py
DeepSeekQQ/plugins/deepseek/stages/: __init__.py  stage_affection.py  stage_context.py  stage_group_filter.py  stage_humanize.py  stage_image_gen.py  stage_llm.py  stage_mcp_execute.py  stage_music.py  (+14 more)
DeepSeekQQ/scripts/: backup_dbs.sh  check_memory_gate.py  probe_minimax.ps1  probe_minimax_models.ps1  probe_minimax_models.py  reassign_sticker_tags.py  test_boundary_with_minimax.ps1  test_mimo_chat.py  test_minimax.ps1  test_minimax_council.py
DeepSeekQQ/tests/: conftest.py  test_absence_events.py  test_agent_router.py  test_api.py  test_api_platform_api_keys.py  test_api_platform_p0.py  test_behavior.py  test_causal_context.py  test_circuit_breaker.py  test_conversation_fatigue.py  test_db_core.py  test_db_facade.py  test_db_memories.py  test_dialogue_rhythm.py  test_emotion_accumulator.py  test_emotion_deep.py  test_emotion_memory.py  test_emotion_params.py  test_global_state.py  test_heat_engine.py  test_humanize_integration.py  test_image_gen.py  test_loop_manager.py  test_mcp_client.py  test_media.py  test_memory_deep.py  test_memory_embed.py  test_migrations.py  test_nonverbal_signals.py  test_ocr.py  test_opinion_tracker.py  test_personalization.py  test_phase4_p3.py  test_pipeline.py  test_pipeline_order.py  test_proactive_p1.py  test_promise_tracker.py  test_prompt.py  test_reminder.py  test_reply_gap.py  (+17 more)
(+239 files in other folders)
