[project]
name = "deepseek-qq"
version = "0.1.0"
description = "DeepSeek QQ Bot"
requires-python = ">=3.9"
dependencies = [
    "nonebot2[fastapi]>=2.0",
    "nonebot-adapter-onebot>=2.0",
    "aiohttp>=3.8",
    "aiosqlite>=0.19",
    "apscheduler>=3.10",
    "aiofiles>=23.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
