[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-qq"
version = "0.1.0"
description = "DeepSeek QQ Bot"
requires-python = ">=3.11"
dependencies = [
    "nonebot2[fastapi]~=2.5.0",
    "nonebot-adapter-onebot~=2.4.6",
    "nonebot-plugin-apscheduler~=0.5.0",
    "aiohttp~=3.13.5",
    "aiofiles~=25.1.0",
    "aiosqlite~=0.22.1",
    "apscheduler~=3.11.2",
    "httpx~=0.28.1",
    "Pillow~=12.2.0",
    "numpy~=2.4",
    "tavily-python~=0.7.25",
    "tiktoken~=0.13.0",
    "zhdate~=0.1",
    "edge-tts~=7.2.8",
    "python-dotenv~=1.2.2",
    "PyYAML~=6.0.3",
    "uvicorn~=0.48.0",
    "requests~=2.34",
    "pytz~=2026.2",
    "gTTS~=2.5.4",
    "yt-dlp~=2026.06",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime~=1.4.4"]
all = ["rapidocr-onnxruntime~=1.4.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "unit: 纯逻辑测试，无 I/O 依赖（mock 隔离）",
    "integration: 需要真实服务或组件间交互（如 aiosqlite :memory:）",
    "slow: 含 asyncio.sleep / time.sleep 的测试，执行较慢",
    "needs_db: 涉及数据库接口（即使已 mock 也标记以便识别）",
    "needs_llm: 需要调用 LLM API（真实或 mock 均可）",
    "needs_network: 需要真实网络访问",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
